--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "طبخ مع درجات الحرارة المناسبة (2/4)",
     "hob_induction2_tips": "اعثر على جميع درجات الحرارة التي تحتاجها لتحضير الطبق المثالي",
     "hob_induction3": "تواصل واكتشف جميع الوصفات (3/4)",
-    "hob_induction3_tips": "تعرف على كيفية توصيل أواني الطهي الذكية الخاصة بك وتصفح مجموعة واسعة من الوصفات خطوة بخطوة ، والتي تم إنتاجها خصيصا لدرجة الحرارة",
+    "hob_induction3_tips": "تعرف على كيفية توصيل أدوات الطهي الذكية الخاصة بك وتصفح مجموعة واسعة من الوصفات خطوة بخطوة، والتي تم إعدادها خصيصًا للطهي بدقة درجة الحرارة.",
     "hob_induction4": "احصل على الإلهام وحدد تفضيلاتك (4/4)",
-    "hob_induction4_tips": "اكتشف ذلك ، دليل رقمي وحافظ على تحديث جهازك بآخر تحديثات البرامج الثابتة.",
+    "hob_induction4_tips": "استكشف جميع الوظائف، وابحث عن الدليل الرقمي، وحافظ على جهازك محدثًا بأحدث تحديثات البرامج الثابتة.",
     "get_started": "بدء الاستخدام",
     "hob_get_started_tips": "اكتشف ما يمكنك فعله بالموقد الخاص بك. سنوضح لك كيف يعمل.",
     "refresh_program_list": "تحديث قائمة البرامج",
@@ -4146,5 +4146,6 @@
     "CL_DV_OV_24_brightness_setting_content": "يمكن تغيير سطوع شاشة الفرن والمفاتيح حسب تفضيلاتك. ",
     "CL_DV_OV_24_close_user_detected": "تم اكتشاف إغلاق المستخدم",
     "CL_CF_AS_firmware_update_upgrading": "تحديث ...",
-    "CL_DV_HOB_refresh_mode": "وضع التحديث"
+    "CL_DV_HOB_refresh_mode": "وضع التحديث",
+    "hob_induction3_new_tips": "تعرف على كيفية توصيل أدوات الطهي الذكية الخاصة بك وتصفح مجموعة واسعة من الوصفات خطوة بخطوة، والتي تم إعدادها خصيصًا للطهي بدقة درجة الحرارة."
 }
