--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "با دمای مناسب بپزید (2/4)",
     "hob_induction2_tips": "تمام دمای مورد نیاز برای تهیه غذای عالی را پیدا کنید",
     "hob_induction3": "اتصال و کشف همه دستور العمل ها (3/4)",
-    "hob_induction3_tips": "بیاموزید که چگونه ظروف آشپزی هوشمند خود را به هم وصل کنید و طیف گسترده ای از دستور العمل های گام به گام را که به طور خاص برای دما تولید شده اند مرور کنید.",
+    "hob_induction3_tips": "نحوه اتصال ظروف آشپزی هوشمند خود را بیاموزید و طیف گسترده ای از دستور العمل های گام به گام را مرور کنید، که به طور خاص برای پخت دقیق دما ساخته شده اند.",
     "hob_induction4": "الهام بگیرید و ترجیحات خود را تنظیم کنید (4/4)",
-    "hob_induction4_tips": "کتابچه راهنمای دیجیتال را پیدا کنید و دستگاه خود را با آخرین به‌روزرسانی‌های میان‌افزار به‌روز نگه دارید.",
+    "hob_induction4_tips": "همه عملکردها را کاوش کنید، کتابچه راهنمای دیجیتال را بیابید و دستگاه خود را با آخرین به روز رسانی سیستم عامل به روز نگه دارید.",
     "get_started": "شروع",
     "hob_get_started_tips": "دریابید که با اجاق گاز خود چه کاری می توانید انجام دهید. ما به شما نشان خواهیم داد که چگونه کار می کند.",
     "refresh_program_list": "لیست برنامه ها را به روز کنید",
@@ -4146,5 +4146,6 @@
     "CL_DV_OV_24_brightness_setting_content": "روشنایی نمایشگر فر و کلیدها را می توان به دلخواه تغییر داد. ",
     "CL_DV_OV_24_close_user_detected": "کاربر نزدیک شناسایی شد",
     "CL_CF_AS_firmware_update_upgrading": "به روز رسانی ...",
-    "CL_DV_HOB_refresh_mode": "حالت تازه کردن"
+    "CL_DV_HOB_refresh_mode": "حالت تازه کردن",
+    "hob_induction3_new_tips": "نحوه اتصال ظروف آشپزی هوشمند خود را بیاموزید و طیف گسترده ای از دستور العمل های گام به گام را که به طور خاص برای پخت و پز دقیق دما ساخته شده اند مرور کنید."
 }
