--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "Готовьте при правильной температуре (2/4)",
     "hob_induction2_tips": "Найдите все температуры, необходимые для приготовления идеального блюда.",
     "hob_induction3": "Подключитесь и откройте для себя все рецепты (3/4)",
-    "hob_induction3_tips": "Узнайте, как подключить умную посуду, и просмотрите широкий спектр пошаговых рецептов, специально разработанных для определенной температуры.",
+    "hob_induction3_tips": "Узнайте, как подключить умную посуду и просмотреть широкий спектр пошаговых рецептов, специально созданных для приготовления блюд с точным соблюдением температуры.",
     "hob_induction4": "Вдохновитесь и установите свои предпочтения (4/4)",
-    "hob_induction4_tips": "Ознакомьтесь с цифровым руководством и регулярно обновляйте прошивку вашего устройства.",
+    "hob_induction4_tips": "Изучите все функции, найдите электронное руководство и регулярно обновляйте прошивку своего устройства.",
     "get_started": "Начать",
     "hob_get_started_tips": "Узнайте, что вы можете сделать с вашей плитой. Мы покажем вам, как это работает.",
     "refresh_program_list": "Обновить список программ",
@@ -4146,5 +4146,6 @@
     "CL_DV_OV_24_brightness_setting_content": "Яркость дисплея и кнопок духовки можно изменить по вашему желанию. ",
     "CL_DV_OV_24_close_user_detected": "Обнаружен близкий пользователь",
     "CL_CF_AS_firmware_update_upgrading": "Обновление...",
-    "CL_DV_HOB_refresh_mode": "Режим обновления"
+    "CL_DV_HOB_refresh_mode": "Режим обновления",
+    "hob_induction3_new_tips": "Узнайте, как подключить умную посуду и просмотреть широкий спектр пошаговых рецептов, специально созданных для приготовления блюд с точным соблюдением температуры."
 }
