--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "ปรุงอาหารด้วยอุณหภูมิที่เหมาะสม (2/4)",
     "hob_induction2_tips": "ค้นหาอุณหภูมิทั้งหมดที่คุณต้องการเพื่อเตรียมอาหารจานโปรด",
     "hob_induction3": "เชื่อมต่อและค้นพบสูตรอาหารทั้งหมด (3/4)",
-    "hob_induction3_tips": "เรียนรู้วิธีเชื่อมต่อเครื่องครัวอัจฉริยะของคุณ และเลือกดูสูตรอาหารทีละขั้นตอนที่หลากหลาย ซึ่งผลิตขึ้นสำหรับอุณหภูมิโดยเฉพาะ",
+    "hob_induction3_tips": "เรียนรู้วิธีเชื่อมต่อเครื่องครัวอัจฉริยะของคุณและค้นหาสูตรอาหารหลากหลายแบบทีละขั้นตอนที่ออกแบบมาเพื่อการปรุงอาหารที่แม่นยำในอุณหภูมิโดยเฉพาะ",
     "hob_induction4": "รับแรงบันดาลใจและตั้งค่ากำหนดของคุณ (4/4)",
-    "hob_induction4_tips": "ค้นหาคู่มือดิจิทัลและทำให้อุปกรณ์ของคุณทันสมัยอยู่เสมอด้วยการอัพเดตเฟิร์มแวร์ล่าสุด",
+    "hob_induction4_tips": "สำรวจฟังก์ชันทั้งหมด ค้นหาคู่มือดิจิทัล และอัปเดตเครื่องใช้ของคุณให้ทันสมัยด้วยเฟิร์มแวร์อัพเดตล่าสุด",
     "get_started": "เริ่ม",
     "hob_get_started_tips": "ค้นหาสิ่งที่คุณสามารถทําได้ด้วยเตาของคุณ เราจะแสดงวิธีการทํางาน",
     "refresh_program_list": "รีเฟรชรายการโปรแกรม\nรีเฟรชรายการโปรแกรม",
@@ -4146,5 +4146,6 @@
     "CL_DV_OV_24_brightness_setting_content": "สามารถเปลี่ยนความสว่างของหน้าจอเตาอบและปุ่มต่างๆ ได้ตามความต้องการ ",
     "CL_DV_OV_24_close_user_detected": "ตรวจพบผู้ใช้ที่ปิด",
     "CL_CF_AS_firmware_update_upgrading": "กำลังอัปเดต ...",
-    "CL_DV_HOB_refresh_mode": "โหมดรีเฟรช"
+    "CL_DV_HOB_refresh_mode": "โหมดรีเฟรช",
+    "hob_induction3_new_tips": "เรียนรู้วิธีเชื่อมต่อเครื่องครัวอัจฉริยะของคุณและค้นหาสูตรอาหารหลากหลายแบบทีละขั้นตอนที่ออกแบบมาเพื่อการปรุงอาหารที่แม่นยำในอุณหภูมิโดยเฉพาะ"
 }
