--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "Гответе со соодветни температури (2/4)",
     "hob_induction2_tips": "Најдете ги сите температури што ви се потребни за да го подготвите совршеното јадење",
     "hob_induction3": "Поврзете се и откријте ги сите рецепти (3/4)",
-    "hob_induction3_tips": "Научете како да го поврзете вашиот паметен сад за готвење и да пребарувате низ широк спектар чекор-по-чекор рецепти, специјално произведени за температура",
+    "hob_induction3_tips": "Научете како да го поврзете вашиот паметен сад за готвење и прелистувајте низ широк спектар на рецепти чекор-по-чекор, специјално направени за прецизно готвење на температурата.",
     "hob_induction4": "Инспирирајте се и поставете ги вашите преференции (4/4)",
-    "hob_induction4_tips": "Дознајте, дигитален прирачник и одржувајте го вашиот уред ажуриран со најновите ажурирања на фирмверот.",
+    "hob_induction4_tips": "Истражете ги сите функции, пронајдете го дигиталниот прирачник и одржувајте го вашиот уред ажуриран со најновите ажурирања на фирмверот.",
     "get_started": "Почни",
     "hob_get_started_tips": "Дознајте што можете да направите со вашата плоча за готвење. Ќе ви покажеме како функционира.",
     "refresh_program_list": "Освежете ја листата на програми",
@@ -4146,5 +4146,6 @@
     "CL_DV_OV_24_brightness_setting_content": "Осветленоста на екранот и копчињата на рерната може да се сменат по ваша желба. ",
     "CL_DV_OV_24_close_user_detected": "Откриен е близок корисник",
     "CL_CF_AS_firmware_update_upgrading": "Се ажурира...",
-    "CL_DV_HOB_refresh_mode": "Режим на освежување"
+    "CL_DV_HOB_refresh_mode": "Режим на освежување",
+    "hob_induction3_new_tips": "Научете како да го поврзете вашиот паметен сад за готвење и прелистувајте низ широк спектар на рецепти чекор-по-чекор, специјално направени за прецизно готвење на температурата."
 }
